[package]
name = "api-test-rs"
version = "1.0.0"
edition = "2021"

build = "build.rs"

[profile.release]
opt-level = 'z'
debug = false
debug-assertions = false
overflow-checks = false
lto = true
panic = 'abort'
incremental = false
codegen-units = 1
rpath = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = { version = "0.32.1", default-features = false, features = ["accesskit", "default_fonts", "glow", "persistence"]}
egui_extras = { version = "0.32.1", features = ["image"] }
image = { version = "0.25" }
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tokio = { version = "1", features = ["full"] }

# https://docs.rs/reqwest/latest/reqwest/
reqwest = { version = "0.11", features = ["json", "multipart"] }

# https://github.com/Peternator7/strum
strum = { version = "0.24", features = ["derive"] }

regex = "1.5"
lazy_static = "1.4"
# tungstenite = "0.26.1"
tokio-tungstenite = "*"
futures-util = "0.3.31"
rand = "0.8"
futures = "0.3"
num-format = "0.4"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"
